Updated folders and map.

--- a/VirtuaMuseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/VirtuaMuseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -32,10 +32,17 @@ LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-DNR6BK4
 LastExecutedLaunchName=DESKTOP-DNR6BK4
 LastExecutedPIEPreviewDevice=
 
+[MRU]
+MRUItem0=/Game/Map/Map_1
+
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
 CleanShutdown=False
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 
